# ironmesh

./: .gitignore  Agents.md  CLAUDE.md  Cargo.toml  LICENSE  PACE.md  README.md  SECURITY.md  TODO.txt  deny.toml  justfile  rust-toolchain.toml  server_ca.pem.txt  start_node.sh
.githooks/: pre-commit  pre-push
apps/android-app/: Cargo.toml  README.md
apps/android-app/app/: build.gradle.kts
apps/android-app/app/src/androidTest/: AndroidManifest.xml
apps/android-app/app/src/debug/: AndroidManifest.xml
apps/android-app/native/: .gitignore  README.md  gradle.properties  settings.gradle.kts
apps/android-app/native/app/: build.gradle.kts  proguard-rules.pro
apps/android-app/src/: android_saf_backend.rs  android_test_bridge.rs  lib.rs  saf_sync.rs
apps/android-server-node-app/: Cargo.toml  README.md  gradlew-local  settings.gradle.kts
apps/android-server-node-app/app/: build.gradle.kts
apps/android-server-node-app/src/: lib.rs
apps/cli-client/: Cargo.toml
apps/cli-client/src/: main.rs
apps/cli-client/tests/: version.rs
apps/config-app/: Cargo.toml  build.rs
apps/config-app/src/: main.rs  windows_tray.rs
apps/config-app/tests/: package_handoff.rs
apps/ios-app/: Cargo.toml  cbindgen.toml
apps/ios-app/include/: ironmesh_ios_app.h
apps/ios-app/scripts/: generate_c_header.sh
apps/ios-app/src/: lib.rs
apps/ironmesh-background-launcher/: Cargo.toml
apps/ironmesh-background-launcher/src/: main.rs
apps/ironmesh-config-app/: Cargo.toml  build.rs
apps/ironmesh-config-app/src/: main.rs
apps/ironmesh-folder-agent/: Cargo.toml
apps/ironmesh-folder-agent/gnome-shell-extension/ironmesh-status@ironmesh.io/: extension.js  stylesheet.css
apps/ironmesh-folder-agent/src/: gnome.rs  main.rs  ui.rs
apps/ironmesh-folder-agent/src/ui/: index.html
apps/ironmesh-folder-agent/tests/: version.rs
apps/os-integration/: Cargo.toml
apps/os-integration/src/: main.rs
apps/os-integration/tests/: version.rs
apps/rendezvous-service/: Cargo.toml
apps/rendezvous-service/src/: auth.rs  bootstrap_claims.rs  config.rs  control.rs  failover.rs  main.rs  presence.rs  relay.rs  state.rs
apps/rendezvous-service/tests/: version.rs
apps/server-node/: Cargo.toml
apps/server-node/src/: cluster.rs  main.rs  main_tests.rs  replication.rs  storage.rs  storage_tests.rs  ui.rs
apps/server-node/src/ui/: app.css  app.js  index.html
apps/server-node/tests/: version.rs
apps/tiny-display-status/: Cargo.toml
apps/tiny-display-status/src/: framebuffer.rs  main.rs  palette.rs  stats.rs  touch.rs
crates/adapter-linux-fuse/: Cargo.toml
crates/adapter-linux-fuse/src/: client_rights_edge.rs  gnome.rs  lib.rs  mount_main.rs
crates/adapter-windows-cfapi/: Cargo.toml  README.md
crates/adapter-windows-cfapi/src/: adapter.rs  auth.rs  cfapi.rs  cfapi_safe_wrap.rs  cli.rs  close_upload.rs  connection_config.rs  content_fingerprint.rs  helpers.rs  hydration_control.rs  lib.rs  live.rs  local_state.rs  monitor.rs  placeholder_metadata.rs  register.rs  runtime.rs  serve.rs  snapshot_cache.rs  sync_root_identity.rs  windows_status.rs
crates/client-sdk/: Cargo.toml
crates/client-sdk/src/: bootstrap.rs  client.rs  client_node.rs  connection.rs  content_addressed_client_cache.rs  device_auth.rs  ironmesh_client.rs  latency_probe.rs  lib.rs  remote_sync.rs  session_pool.rs
crates/client-sdk/src/ironmesh_client/: tests.rs
crates/common/: Cargo.toml
crates/common/src/: content_fingerprint.rs  lib.rs  logging.rs  range_chunk_cache.rs  traced_mutex.rs  traced_rwlock.rs
crates/desktop-client-config/: Cargo.toml
crates/desktop-client-config/src/: lib.rs
crates/rendezvous-server/: Cargo.toml
crates/rendezvous-server/src/: auth.rs  cluster_registry.rs  global_registration.rs  lib.rs
crates/server-node-sdk/: Cargo.toml  build.rs
crates/server-node-sdk/src/: cluster.rs  embedded_rendezvous.rs  hardware_health.rs  lib.rs  listing.rs  main_tests.rs  map_config.rs  map_dataset_import.rs  natural_earth_import.rs  reliability_telemetry.rs  replication.rs  s3_frontend.rs  setup.rs  storage.rs  storage_tests.rs  transport_service.rs  ui.rs  web_maps.rs
crates/server-node-sdk/src/storage/: data_scrub.rs  media_cache.rs  media_tools.rs  mod.rs  sqlite_impl.rs  turso_impl.rs
crates/server-node-sdk/src/ui/: app.css  app.js  index.html  setup_app.js  setup_index.html
crates/server-node-sdk/src/web_maps/: mbtiles.rs
crates/stats-collector-server/: Cargo.toml
crates/stats-collector-server/src/: aggregate.rs  country.rs  ingest.rs  lib.rs  main.rs  rate_limit.rs  storage.rs
crates/sync-agent-core/: Cargo.toml
crates/sync-agent-core/src/: folder_agent_conflicts.rs  folder_agent_modification_log.rs  folder_agent_runtime.rs  folder_agent_startup.rs  folder_agent_state.rs  folder_agent_ui.rs  lib.rs
crates/sync-agent-core/src/folder_agent_ui/: app.css  app.js  index.html
crates/transport-sdk/: Cargo.toml
crates/transport-sdk/src/: bootstrap.rs  bootstrap_claim.rs  candidates.rs  cluster_registration.rs  direct_quic.rs  http_connector.rs  identity.rs  lib.rs  multiplex_transport.rs  mux.rs  peer.rs  relay.rs  relay_http_wire.rs  relay_security.rs  relay_tunnel.rs  relay_wake.rs  rendezvous.rs  rendezvous_runtime.rs  request_auth.rs  session.rs  transport_protocol.rs  websocket_client.rs  ws_stream.rs
crates/web-ui-backend/: Cargo.toml  build.rs
crates/web-ui-backend/src/: lib.rs  mbtiles.rs
crates/web-ui-backend/static/: app.js  index.html
crates/windows-thumbnail-provider/: Cargo.toml
crates/windows-thumbnail-provider/src/: lib.rs
tests/system-tests/: Cargo.toml
tests/system-tests/src/: adapter-linux-fuse_test.rs  cfapi_monitor_test.rs  cli_latency_test.rs  cli_managed_rendezvous_latency_test.rs  client_sdk_test.rs  cluster_test.rs  config_app_test.rs  folder_agent_test.rs  framework.rs  framework_win.rs  generic_test.rs  global_rendezvous_system_test.rs  lib.rs  relay_security_e2e_test.rs  s3_test.rs  web-ui-backend_test.rs  windows_cfapi_cluster_workload_support.rs  windows_cfapi_cluster_workload_test.rs  windows_cluster_workload_support.rs
(+395 files in other folders)
