[workspace]
members = [
    "crates/common",
    "crates/transport-sdk",
    "crates/client-sdk",
    "crates/server-node-sdk",
    "crates/web-ui-backend",
    "crates/sync-core",
    "crates/sync-agent-core",
    "crates/adapter-linux-fuse",
    "crates/adapter-windows-cfapi",
    "crates/windows-thumbnail-provider",
    "apps/server-node",
    "apps/rendezvous-service",
    "apps/cli-client",
    "apps/ironmesh-folder-agent",
    "apps/android-app",
    "apps/ios-app",
    "apps/os-integration",
    "tests/system-tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["ironmesh contributors"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
axum = "0.8"
blake3 = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
git-version = "0.3.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
async-trait = "0.1"
notify = "6"
winres = "0.1"
