[package]
name = "android-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
client-sdk = { path = "../../crates/client-sdk" }
jni = "0.21"
serde_json.workspace = true
tokio.workspace = true
web-ui-backend = { path = "../../crates/web-ui-backend" }
