[package]
name = "android-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
blake3.workspace = true
bytes.workspace = true
client-sdk = { path = "../../crates/client-sdk" }
common = { path = "../../crates/common" }
jni = "0.21"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sync-agent-core = { path = "../../crates/sync-agent-core" }
sync-core = { path = "../../crates/sync-core" }
tokio.workspace = true
tracing.workspace = true
web-ui-backend = { path = "../../crates/web-ui-backend" }
