[package]
name = "cli-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
client-sdk = { path = "../../crates/client-sdk" }
common = { path = "../../crates/common" }
git-version.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
web-ui-backend = { path = "../../crates/web-ui-backend" }

[dev-dependencies]
assert_cmd.workspace = true

[target.'cfg(windows)'.build-dependencies]
winres.workspace = true

[lints]
workspace = true
