[package]
name = "cli-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"
default-run = "ironmesh"
autobins = false

[[bin]]
name = "ironmesh"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
bytes.workspace = true
clap.workspace = true
client-sdk = { path = "../../crates/client-sdk" }
common = { path = "../../crates/common" }
futures-util = "0.3"
git-version.workspace = true
http-body-util = "0.1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
web-ui-backend = { path = "../../crates/web-ui-backend" }

[dev-dependencies]
assert_cmd.workspace = true
transport-sdk = { path = "../../crates/transport-sdk" }
uuid.workspace = true

[target.'cfg(windows)'.build-dependencies]
winres.workspace = true

[lints]
workspace = true
