[package]
name = "ironmesh-config-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
desktop-client-config = { path = "../../crates/desktop-client-config" }

[target.'cfg(windows)'.build-dependencies]
winres.workspace = true

[lints]
workspace = true