[package]
name = "ironmesh-config-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
client-sdk = { path = "../../crates/client-sdk" }
desktop-status = { path = "../../crates/desktop-status" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
desktop-client-config = { path = "../../crates/desktop-client-config" }

[target.'cfg(windows)'.build-dependencies]
winres.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[lints]
workspace = true
