[package]
name = "ios-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
anyhow.workspace = true
bytes.workspace = true
client-sdk = { path = "../../crates/client-sdk" }
common = { path = "../../crates/common" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
web-ui-backend = { path = "../../crates/web-ui-backend" }

[dev-dependencies]
axum.workspace = true
