[package]
name = "ironmesh-background-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
windows-client-config = { path = "../../crates/windows-client-config" }

[target.'cfg(windows)'.build-dependencies]
winres.workspace = true

[lints]
workspace = true