[package]
name = "ironmesh-background-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
desktop-client-config = { path = "../../crates/desktop-client-config" }

[target.'cfg(windows)'.build-dependencies]
winres.workspace = true

[lints]
workspace = true