[package]
name = "ironmesh-folder-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
blake3.workspace = true
clap.workspace = true
client-sdk = { path = "../../crates/client-sdk" }
notify.workspace = true
serde.workspace = true
sync-agent-core = { path = "../../crates/sync-agent-core" }
sync-core = { path = "../../crates/sync-core" }
tokio.workspace = true
ctrlc = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json.workspace = true
