[package]
name = "ironmesh-folder-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
client-sdk = { path = "../../crates/client-sdk" }
git-version.workspace = true
reqwest.workspace = true
sync-agent-core = { path = "../../crates/sync-agent-core" }
sync-core = { path = "../../crates/sync-core" }
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true

[target.'cfg(windows)'.build-dependencies]
winres.workspace = true
