[package]
name = "os-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
adapter-linux-fuse = { path = "../../crates/adapter-linux-fuse" }
adapter-windows-cfapi = { path = "../../crates/adapter-windows-cfapi" }