[package]
name = "os-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
adapter-linux-fuse = { path = "../../crates/adapter-linux-fuse" }
adapter-windows-cfapi = { path = "../../crates/adapter-windows-cfapi" }

[dev-dependencies]
assert_cmd.workspace = true
git-version.workspace = true

[target.'cfg(windows)'.build-dependencies]
winres.workspace = true

[lints]
workspace = true
