[package]
name = "rendezvous-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
transport-sdk = { path = "../../crates/transport-sdk" }
uuid.workspace = true

[dev-dependencies]
reqwest.workspace = true
server-node-sdk = { path = "../../crates/server-node-sdk" }
