[package]
name = "rendezvous-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
aes-gcm-siv = "0.11"
anyhow.workspace = true
axum.workspace = true
axum-server = { version = "0.8", features = ["tls-rustls"] }
base64 = "0.22"
blake3.workspace = true
clap.workspace = true
common = { path = "../../crates/common" }
git-version.workspace = true
pbkdf2 = "0.12"
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = { version = "1.9", features = ["std"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tokio.workspace = true
tokio-rustls = "0.26"
tower = "0.5"
tracing.workspace = true
tracing-subscriber.workspace = true
transport-sdk = { path = "../../crates/transport-sdk" }
uuid.workspace = true
x509-parser = "0.16"

[dev-dependencies]
assert_cmd.workspace = true
client-sdk = { path = "../../crates/client-sdk" }
reqwest.workspace = true
rcgen = "0.14"
server-node-sdk = { path = "../../crates/server-node-sdk" }

[target.'cfg(windows)'.build-dependencies]
winres.workspace = true

[lints]
workspace = true
