[package]
name = "server-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-server = { version = "0.7", features = ["tls-rustls"] }
blake3.workspace = true
bytes.workspace = true
common = { path = "../../crates/common" }
exif = { package = "kamadak-exif", version = "0.6" }
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
percent-encoding = "2"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls = "0.26"
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
tower = "0.5"
uuid.workspace = true
x509-parser = "0.16"
