[package]
name = "server-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
git-version.workspace = true
server-node-sdk = { path = "../../crates/server-node-sdk" }
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
