[package]
name = "tiny-display-status"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
autobins = false

[[bin]]
name = "ironmesh-tiny-display-status"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
embedded-graphics = "0.8"
evdev = "0.13"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
