[package]
name = "adapter-linux-fuse"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []

[target.'cfg(not(windows))'.dependencies]
sync-core = { path = "../sync-core" }
client-sdk = { path = "../client-sdk" }
common = { path = "../common" }
anyhow = { workspace = true }
blake3.workspace = true
clap = { workspace = true }
fuser = { version = "0.14", default-features = false }
git-version = { workspace = true }
libc = { version = "0.2" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["blocking", "json", "rustls-tls"] }
ctrlc = "3"
tracing.workspace = true
uuid = { workspace = true }

# Prevent compilation on Windows targets
[target.'cfg(windows)'.dependencies]
# No dependencies; crate will not build

[lints]
workspace = true
