
[package]
name = "adapter-windows-cfapi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Only build this crate on Windows
[target.'cfg(windows)'.dependencies]
sync-core = { path = "../sync-core" }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
windows-sys = { version = "0.61", features = [
	"Win32_Foundation",
	"Win32_Storage_CloudFilters",
	"Win32_Storage_FileSystem",
	"Win32_System_CorrelationVector",
	"Win32_System_IO",
] }
walkdir = "2.3"

# Prevent compilation on non-Windows targets
[target.'cfg(not(windows))'.dependencies]
# No dependencies; crate will not build
