
[package]
name = "adapter-windows-cfapi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Only build this crate on Windows
[target.'cfg(windows)'.dependencies]
sync-core = { path = "../sync-core" }
client-sdk = { path = "../client-sdk" }
common = { path = "../common" }
anyhow = { workspace = true }
blake3.workspace = true
clap = { workspace = true }
git-version = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
widestring = "1.1"
wincs = "0.1"
windows-sys = { version = "0.61", features = [
	"Win32_Foundation",
	"Win32_Storage_CloudFilters",
	"Win32_Storage_FileSystem",
	"Win32_System_CorrelationVector",
	"Win32_System_IO",
] }
ctrlc = "3"
normpath = "1.2"
pathdiff = "0.2"
tracing.workspace = true
walkdir = "2.3"

# Prevent compilation on non-Windows targets
[target.'cfg(not(windows))'.dependencies]
# No dependencies; crate will not build
