[package]
name = "client-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
common = { path = "../common" }
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
sync-core = { path = "../sync-core" }
tokio.workspace = true
uuid.workspace = true
