[package]
name = "client-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
bytes.workspace = true
common = { path = "../common" }
reqwest.workspace = true
rusqlite.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sync-core = { path = "../sync-core" }
tokio.workspace = true
transport-sdk = { path = "../transport-sdk" }
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
