[package]
name = "client-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
base64 = "0.22"
bytes.workspace = true
common = { path = "../common" }
futures-util = "0.3"
reqwest.workspace = true
rusqlite.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sync-core = { path = "../sync-core" }
tokio.workspace = true
tracing.workspace = true
transport-sdk = { path = "../transport-sdk" }
uuid.workspace = true

[dev-dependencies]
axum = { workspace = true, features = ["ws"] }
futures-util = "0.3"

[lints]
workspace = true
