[package]
name = "desktop-client-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo = { version = "0.38.4", default-features = false, features = ["system"] }

[lints]
workspace = true
