[package]
name = "rendezvous-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
common = { path = "../common" }
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = { version = "1.9", features = ["std"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls = "0.26"
tower = "0.5"
tracing.workspace = true
transport-sdk = { path = "../transport-sdk" }
x509-parser = "0.16"

[lints]
workspace = true
