[package]
name = "server-node-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
turso-metadata = ["dep:turso"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-server = { version = "0.8", features = ["tls-rustls"] }
blake3.workspace = true
bytes.workspace = true
common = { path = "../common" }
exif = { package = "kamadak-exif", version = "0.6" }
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
percent-encoding = "2"
reqwest.workspace = true
rusqlite.workspace = true
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = { version = "1.9", features = ["std"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls = "0.26"
transport-sdk = { path = "../transport-sdk" }
turso = { version = "0.6.0-pre.2", optional = true }
tower = "0.5"
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
x509-parser = "0.16"
