[package]
name = "server-node-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
turso-metadata = ["dep:turso"]

[dependencies]
aead = "0.5"
aes-gcm-siv = "0.11"
anyhow.workspace = true
async-stream = "0.3"
async-trait.workspace = true
axum = { workspace = true, features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
base64 = "0.22"
blake3.workspace = true
bytes.workspace = true
common = { path = "../common" }
exif = { package = "kamadak-exif", version = "0.6" }
fs2 = "0.4"
git-version.workspace = true
futures-core = "0.3"
futures-util = "0.3"
http-body-util = "0.1"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
percent-encoding = "2"
pbkdf2 = "0.12"
rand = "0.8"
reqwest.workspace = true
rcgen = { version = "0.14", features = ["crypto", "pem", "ring", "x509-parser"] }
rendezvous-server = { path = "../rendezvous-server" }
rusqlite.workspace = true
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = { version = "1.9", features = ["std"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlite-vfs = "0.2.0"
tokio.workspace = true
tokio-rustls = "0.26"
time = "0.3"
transport-sdk = { path = "../transport-sdk" }
turso = { version = "0.6.0-pre.2", optional = true }
tower = "0.5"
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
x509-parser = "0.16"

[lints]
workspace = true
