[package]
name = "sync-agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
blake3.workspace = true
clap.workspace = true
client-sdk = { path = "../client-sdk" }
common = { path = "../common" }
ctrlc = "3"
notify.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sync-core = { path = "../sync-core" }
tokio.workspace = true
tracing.workspace = true
