[package]
name = "transport-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
base64 = "0.22"
common = { path = "../common" }
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
pkcs8 = { version = "0.10", features = ["pem"] }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid.workspace = true
