[package]
name = "transport-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
base64 = "0.22"
common = { path = "../common" }
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
futures-util = "0.3"
pkcs8 = { version = "0.10", features = ["pem"] }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest.workspace = true
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
rustls-pki-types = { version = "1.9", features = ["std"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tokio-rustls = "0.26"
tokio-tungstenite = "0.24"
yamux = "0.13.8"
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
tokio-util = { version = "0.7", features = ["compat"] }

[lints]
workspace = true
