[package]
name = "web-ui-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
blake3.workspace = true
bytes.workspace = true
client-sdk = { path = "../client-sdk" }
git-version.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
