[package]
name = "web-ui-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
blake3.workspace = true
bytes.workspace = true
client-sdk = { path = "../client-sdk" }
git-version.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlite-vfs = "0.2.0"
tokio.workspace = true
tracing.workspace = true
mime_guess = "2.0.5"
