[package]
name = "windows-thumbnail-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }
windows-core = "0.62.2"

[target.'cfg(not(windows))'.dependencies]
