[package]
name = "system-tests"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["ironmesh contributors"]

[dependencies]
anyhow = "1"
bytes = "1"
client-sdk = { path = "../../crates/client-sdk" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
server_node = { path = "../../apps/server-node", package = "server-node", artifact = "bin" }
cli_client = { path = "../../apps/cli-client", package = "cli-client", artifact = "bin" }
