[package]
name = "system-tests"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["ironmesh contributors"]

[dependencies]
anyhow = "1"
bytes = "1"
client-sdk = { path = "../../crates/client-sdk" }
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rcgen = "0.14"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
adapter-windows-cfapi = { path = "../../crates/adapter-windows-cfapi" }
blake3 = "1"
windows-thumbnail-provider = { path = "../../crates/windows-thumbnail-provider" }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_CloudFilters",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
] }

[dev-dependencies]
server_node = { path = "../../apps/server-node", package = "server-node", artifact = "bin" }
cli_client = { path = "../../apps/cli-client", package = "cli-client", artifact = "bin" }
os_integration = { path = "../../apps/os-integration", package = "os-integration", artifact = "bin" }
ironmesh_folder_agent = { path = "../../apps/ironmesh-folder-agent", package = "ironmesh-folder-agent", artifact = "bin" }
rendezvous_service = { path = "../../apps/rendezvous-service", package = "rendezvous-service", artifact = "bin" }
